--- a/ui/snapshots.ui
+++ b/ui/snapshots.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Fri Oct  4 16:54:34 2013 -->
+<!-- Generated with glade 3.16.0 on Sat Oct  5 14:43:35 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.6 -->
   <object class="GtkImage" id="image3">
@@ -111,6 +111,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">●</property>
+                    <signal name="activate" handler="on_snapshot_new_name_activate" swapped="no"/>
                     <signal name="changed" handler="on_snapshot_new_name_changed" swapped="no"/>
                   </object>
                   <packing>
