--- a/ui/snapshots.ui
+++ b/ui/snapshots.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Sat Oct  5 14:43:35 2013 -->
+<!-- Generated with glade 3.16.0 on Sat Oct  5 14:56:52 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.6 -->
   <object class="GtkImage" id="image3">
@@ -302,6 +302,8 @@
     </child>
   </object>
   <object class="GtkWindow" id="snapshot-top-window">
+    <property name="width_request">600</property>
+    <property name="height_request">400</property>
     <property name="can_focus">False</property>
     <child>
       <object class="GtkBox" id="snapshot-top-box">
@@ -328,6 +330,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="headers_visible">False</property>
+                    <signal name="button-press-event" handler="on_snapshot_list_button_press_event" swapped="no"/>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection" id="treeview-selection">
                         <signal name="changed" handler="on_snapshot_list_changed" swapped="no"/>
@@ -665,9 +668,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="has_tooltip">True</property>
-                    <property name="tooltip_markup" translatable="yes">Revert guest to selected snapshot</property>
-                    <property name="tooltip_text" translatable="yes">Revert guest to selected snapshot</property>
+                    <property name="tooltip_markup" translatable="yes">Run selected snapshot</property>
                     <signal name="clicked" handler="on_snapshot_start_clicked" swapped="no"/>
                     <child>
                       <object class="GtkImage" id="someicon">
