--- a/ui/create.ui
+++ b/ui/create.ui
@@ -2335,7 +2335,7 @@ is not yet supported.&lt;/small&gt;</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xalign">0</property>
-                                <property name="label">Ready to begin installation of &lt;b&gt;foobar&lt;/b&gt;</property>
+                                <property name="label">Ready to begin the installation</property>
                                 <property name="use_markup">True</property>
                               </object>
                               <packing>
