--- a/ui/snapshots.ui
+++ b/ui/snapshots.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Sat Oct  5 14:56:52 2013 -->
+<!-- Generated with glade 3.16.0 on Sat Nov  9 17:57:11 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.6 -->
   <object class="GtkImage" id="image3">
@@ -407,7 +407,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Status:</property>
+                                <property name="label" translatable="yes">VM State:</property>
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
