--- a/ui/details.ui
+++ b/ui/details.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.16.0 on Wed Dec  4 18:33:33 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAccelGroup" id="accelgroup1"/>
@@ -1384,8 +1385,8 @@
                                                     <property name="use_underline">True</property>
                                                     <property name="xalign">0.5</property>
                                                     <property name="draw_indicator">True</property>
-                                                    <signal name="toggled" handler="on_security_type_changed" swapped="no"/>
                                                     <signal name="activate" handler="on_security_type_changed" swapped="no"/>
+                                                    <signal name="toggled" handler="on_security_type_changed" swapped="no"/>
                                                   </object>
                                                   <packing>
                                                     <property name="x_options"/>
@@ -2085,6 +2086,8 @@
                                           <object class="GtkTable" id="table15">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
+                                            <property name="halign">start</property>
+                                            <property name="valign">start</property>
                                             <property name="n_rows">2</property>
                                             <property name="n_columns">2</property>
                                             <property name="column_spacing">12</property>
@@ -2105,6 +2108,7 @@
                                               <object class="GtkHBox" id="hbox21">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
+                                                <property name="spacing">20</property>
                                                 <child>
                                                   <object class="GtkAlignment" id="alignment33">
                                                     <property name="visible">True</property>
@@ -2155,12 +2159,15 @@
                                               <object class="GtkHBox" id="hbox25">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
+                                                <property name="spacing">6</property>
                                                 <child>
                                                   <object class="GtkButton" id="cpu-copy-host">
                                                     <property name="label" translatable="yes">Copy host CPU configuration</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="receives_default">True</property>
+                                                    <property name="valign">start</property>
+                                                    <property name="vexpand">False</property>
                                                     <signal name="clicked" handler="on_cpu_copy_host_clicked" swapped="no"/>
                                                   </object>
                                                   <packing>
@@ -2170,12 +2177,12 @@
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkAlignment" id="alignment38">
+                                                  <object class="GtkButton" id="cpu-clear">
+                                                    <property name="label" translatable="yes">Clear CPU configuration</property>
                                                     <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
-                                                    <child>
-                                                      <placeholder/>
-                                                    </child>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <signal name="clicked" handler="on_cpu_clear_clicked" swapped="no"/>
                                                   </object>
                                                   <packing>
                                                     <property name="expand">True</property>
@@ -2189,6 +2196,7 @@
                                                 <property name="right_attach">2</property>
                                                 <property name="top_attach">1</property>
                                                 <property name="bottom_attach">2</property>
+                                                <property name="x_options">GTK_FILL</property>
                                                 <property name="y_options">GTK_FILL</property>
                                               </packing>
                                             </child>
