--- a/ui/asyncjob.ui
+++ b/ui/asyncjob.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.16.0 on Sat Jan 18 13:22:46 2014 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkWindow" id="vmm-progress">
@@ -34,7 +35,7 @@
                     <property name="xpad">3</property>
                     <property name="ypad">10</property>
                     <property name="stock">gtk-dialog-info</property>
-                    <property name="icon-size">6</property>
+                    <property name="icon_size">6</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -50,7 +51,8 @@
                     <property name="yalign">0</property>
                     <property name="label" translatable="yes">Please wait a few moments...</property>
                     <property name="wrap">True</property>
-                    <property name="width_chars">40</property>
+                    <property name="width_chars">50</property>
+                    <property name="max_width_chars">50</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -90,6 +92,7 @@
                     <property name="xalign">0</property>
                     <property name="label">some warning</property>
                     <property name="wrap">True</property>
+                    <property name="max_width_chars">40</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
