Move shared cdrom media UI to mediacombo.py

--- a/ui/create.ui
+++ b/ui/create.ui
@@ -687,40 +687,12 @@ bar</property>
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkAlignment" id="alignment12">
+                                                  <object class="GtkAlignment" id="install-local-cdrom-align">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
                                                     <property name="left_padding">20</property>
                                                     <child>
-                                                      <object class="GtkHBox" id="hbox10">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">False</property>
-                                                        <property name="spacing">6</property>
-                                                        <child>
-                                                          <object class="GtkComboBox" id="install-local-cdrom-combo">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <signal name="changed" handler="on_install_local_cdrom_combo_changed" swapped="no"/>
-                                                          </object>
-                                                          <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="fill">False</property>
-                                                            <property name="position">0</property>
-                                                          </packing>
-                                                        </child>
-                                                        <child>
-                                                          <object class="GtkImage" id="install-local-cdrom-warn">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="stock">gtk-dialog-warning</property>
-                                                          </object>
-                                                          <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="position">1</property>
-                                                          </packing>
-                                                        </child>
-                                                      </object>
+                                                      <placeholder/>
                                                     </child>
                                                   </object>
                                                   <packing>
